# transema1

./: .gitignore  Dockerfile  launch_k_on_docker.sh
kframework/usr/lib/kframework/include/config/: macros.h
kframework/usr/lib/kframework/lib/kllvm/gdb/: interpreter-gdb.py  kllvm.py
kframework/usr/lib/kframework/lib/kllvm/llvm/: equality.ll  getTag.ll  hash.ll  take_steps.ll
src/: c.sh  f  l.sh  r.sh  transema-with-main
src/semantics/: MOVQ-R64-IMM64  MOVQ-R64-M64  MOVQ-R64-R64
src/transema/: KTermAnalyser.java  Main.java  SemaRulesLoader.java  SemanticFunction.java  TransemaIREmitter.java
src/transema/backend/: TransemaBackend.java  TransemaKModule.java  jar.sh
src/transema/backend/astAnalyser/: KTermAnalyser.java  SemaRulesLoader.java  SemanticFunction.java
src/transema/backend/codegen/: KTermAnalyser.java  SemaRulesLoader.java  SemanticFunction.java  TransemaIREmitter.java
src/transema/backend/codegen/native/: CMakeLists.txt
src/transema/backend/codegen/native/include/LLVMCodegen/: LLVMCodegen.h
src/transema/backend/codegen/native/include/SemanticFunction/: EmitFunctionContext.h  SemanticFunction.h
src/transema/backend/codegen/native/include/YamlParser/: YamlParser.h
src/transema/backend/codegen/native/lib/: CMakeLists.txt
src/transema/backend/codegen/native/lib/LLVMCodegen/: CMakeLists.txt  LLVMCodegen.cpp
src/transema/backend/codegen/native/lib/YamlParser/: CMakeLists.txt  YamlParser.cpp
src/transema/backend/codegen/native/tools/: CMakeLists.txt
src/transema/backend/codegen/native/tools/transema-codegen/: CMakeLists.txt  main.cpp
src/transema/codegen/: LLVMCodegen.java  TransemaCodegen.java
src/transema/codegen/native/: CMakeLists.txt  LLVMCodegen.cpp  transema_codegen_LLVMCodegen.h  transema_codegen_TransemaCodegen.h
src/transema/codegen/native/llvmCodegen/: CMakeLists.txt
src/transema/codegen/native/llvmCodegen/include/: transema_codegen_LLVMCodegen.h  transema_codegen_TransemaCodegen.h
src/transema/codegen/native/llvmCodegen/include/LLVMCodegen/: EmitFunctionContext.h  LLVMCodegen.h  SemanticFunction.h
src/transema/codegen/native/llvmCodegen/lib/: JNIInterface.cpp  main.cpp
src/transema/codegen/native/llvmCodegen/lib/LLVMCodegen/: LLVMCodegen.cpp  SemanticFunctionGenInfo.cpp
src/transema/emitter/: LLVMEmitter.java
